WIP: fixing install

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,21 +1,22 @@
-[OPTIONS]
+[SQLSERVER2008]
 ACTION="Install"
-IACCEPTSQLSERVERLICENSETERMS=
-UpdateEnabled="0"
 FEATURES="{{cfg.features}}"
 INSTANCEID="{{cfg.instance}}"
 INSTANCENAME="{{cfg.instance}}"
+HELP="False"
+INDICATEPROGRESS="False"
+QUIET="True"
+QUIETSIMPLE="False"
+X86="False"
+MEDIASOURCE="{{pkg.path}}\bin\"
+INSTANCEDIR="{{pkg.svc_data_path}}"
 AGTSVCSTARTUPTYPE="Manual"
-INSTALLSQLDATADIR="{{pkg.svc_data_path}}"
-SQLSYSADMINACCOUNTS="{{cfg.sys_admin_account}}"
-SQLSVCACCOUNT="{{cfg.svc_account}}"
-SQLSVCPASSWORD="{{cfg.svc_account_password}}"
+ISSVCSTARTUPTYPE="Manual"
+ASSVCSTARTUPTYPE="Manual"
 SQLSVCSTARTUPTYPE="Manual"
-SQLBACKUPDIR="{{pkg.svc_data_path}}\backup"
-SQLTEMPDBDIR="{{pkg.svc_data_path}}"
-SQLTEMPDBLOGDIR="{{pkg.svc_data_path}}"
-SQLUSERDBDIR="{{pkg.svc_data_path}}"
-SQLUSERDBLOGDIR="{{pkg.svc_data_path}}"
-TCPENABLED="1"
-SECURITYMODE="SQL"
-SAPWD="{{cfg.sa_password}}"
+BROWSERSVCSTARTUPTYPE="Manual"
+RSSVCSTARTUPTYPE="Manual"
+ISSVCACCOUNT="NT AUTHORITY\NetworkService"
+SQLSVCACCOUNT="Administrator"
+SQLSVCPASSWORD="{{cfg.sa_password}}"
+SQLSYSADMINACCOUNTS="{{sys.hostname}}\Administrator"
