--- a/config_install/config.ini
+++ b/config_install/config.ini
@@ -1,21 +1,47 @@
-[OPTIONS]
+[SQLSERVER2008]
 ACTION="Install"
-IACCEPTSQLSERVERLICENSETERMS=
-UpdateEnabled="0"
 FEATURES="{{cfg.features}}"
 INSTANCEID="{{cfg.instance}}"
 INSTANCENAME="{{cfg.instance}}"
-AGTSVCSTARTUPTYPE="Manual"
+HELP="False"
+INDICATEPROGRESS="False"
+QUIET="True"
+QUIETSIMPLE="False"
+X86="False"
+MEDIASOURCE="{{pkg.path}}\bin\"
+ERRORREPORTING="False"
+INSTALLSHAREDDIR="{{pkg.svc_data_path}}/share"
+INSTALLSHAREDWOWDIR="{{pkg.svc_data_path}}/share_x86"
 INSTALLSQLDATADIR="{{pkg.svc_data_path}}"
-SQLSYSADMINACCOUNTS="{{cfg.sys_admin_account}}"
-SQLSVCACCOUNT="{{cfg.svc_account}}"
-SQLSVCPASSWORD="{{cfg.svc_account_password}}"
-SQLSVCSTARTUPTYPE="Manual"
 SQLBACKUPDIR="{{pkg.svc_data_path}}\backup"
-SQLTEMPDBDIR="{{pkg.svc_data_path}}"
-SQLTEMPDBLOGDIR="{{pkg.svc_data_path}}"
+SQLTEMPDBDIR="{{pkg.svc_data_path}}\tmp"
+SQLTEMPDBLOGDIR="{{pkg.svc_data_path}}\tmp\log"
 SQLUSERDBDIR="{{pkg.svc_data_path}}"
-SQLUSERDBLOGDIR="{{pkg.svc_data_path}}"
-TCPENABLED="1"
-SECURITYMODE="SQL"
-SAPWD="{{cfg.sa_password}}"
+SQLUSERDBLOGDIR="{{pkg.svc_data_path}}\log"
+INSTANCEDIR="{{pkg.svc_path}}"
+SQMREPORTING="False"
+INSTANCENAME="HAB_SQL_2008_2"
+AGTSVCSTARTUPTYPE="Manual"
+ISSVCSTARTUPTYPE="Automatic"
+ISSVCACCOUNT="NT AUTHORITY\NetworkService"
+ASSVCSTARTUPTYPE="Automatic"
+ASCOLLATION="Latin1_General_CI_AS"
+ASDATADIR="data"
+ASLOGDIR="data/log"
+ASBACKUPDIR="as/data/backup"
+ASTEMPDIR="as/data/temp"
+ASCONFIGDIR="as/data/config"
+ASPROVIDERMSOLAP="1"
+SQLSVCSTARTUPTYPE="Manual"
+FILESTREAMLEVEL="0"
+ENABLERANU="True"
+SQLCOLLATION="SQL_Latin1_General_CP1_CI_AS"
+SQLSVCACCOUNT="Administrator"
+SQLSVCPASSWORD="{{cfg.sa_password}}"
+SQLSYSADMINACCOUNTS="{{sys.hostname}}\Administrator"
+ADDCURRENTUSERASSQLADMIN="False"
+TCPENABLED="0"
+NPENABLED="0"
+BROWSERSVCSTARTUPTYPE="Manual"
+RSSVCSTARTUPTYPE="Manual"
+RSINSTALLMODE="FilesOnlyMode"
