--- a/default.toml
+++ b/default.toml
@@ -5,7 +5,7 @@ sa_password="Pass@word1"
 port=8888
 app_user="hab"
 app_password="h@b1Tat"
-instance="hab_sql_server_2008"
+instance="habsqlserver2008"
 sys_admin_account="Administrator"
 svc_account="NT AUTHORITY\\Network Service"
 svc_account_password=""
